examples/passing/PendingConflictingImports/A.purs
module A where

thing :: Int
thing = 1
