examples/failing/ExportConflictValue/A.purs
module A where

x :: Boolean
x = true
